2008-06-25  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-window.c:
	Fix typo in doc

2008-06-24  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-stackable-window.c
	(hildon_stackable_window_unset_program):
	Calculate correctly whether to show the previous window if the
	last one is removed from the stack.
	(hildon_stackable_window_go_to_root_window):
	Send delete events starting from the topmost window.
	Stop if one of the windows is not destroyed.
	Update doc.
	(hildon_stackable_window_delete_event)
	(hildon_stackable_window_class_init):
	Ignore the delete event if the window is not the topmost one.

2008-06-24  Alejandro G. Castro <alex@igalia.com>

	* src/hildon-pannable-area.c
	(hildon_pannable_area_expose_event): Fixed a problem when
	selecting the background color of the scrollbars.

2008-06-23  Alberto Garcia  <agarcia@igalia.com>

	* examples/hildon-stackable-window-example.c
	* src/hildon-stackable-window.c
	* src/hildon-stackable-window.h
	hildon_stackable_window_go_home() renamed to
	hildon_stackable_window_go_to_root_window()
	Send delete events to windows rather than closing them with
	gtk_widget_destroy()

2008-06-19  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-pannable-area.c
	(hildon_pannable_area_button_release_cb): Fix overshooting in
	accel mode.

2008-06-19  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-pannable-area.c
	(hildon_pannable_area_init): Initially show the scroll indicators.
	(hildon_pannable_area_map): Fade the scroll indicators out upon mapping.

	Add initial effect showing the widget is pannable.

2008-06-19  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-pannable-area.c
	(hildon_pannable_area_class_init)
	(hildon_pannable_area_set_property)
	(hildon_pannable_area_get_property)
	(hildon_pannable_area_button_press_cb):
	New 'velocity_fast_factor' property to decide which velocity is
	considered fast.

2008-06-19  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-pannable-area.c